Change title from 'Kynzo' to 'INTERVIA'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kynzo | Sign Up</title>
+  <title>INTERVIA | Sign Up</title>
   <link rel="stylesheet" href="SignUP.css" />
 </head>
 
